<resources>
    <string name="app_name">Composition</string>
    <string name="welcome_title">Состав числа</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="button_understand">Понятно</string>
    <string name="chose_level_title">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="level_easy">Легкий</string>
    <string name="level_hard">Тяжелый</string>
    <string name="level_normal">Средний</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_mark">\?</string>
    <string name="progress_answer">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game Over</string>
    <string name="retry">Попробовать снова</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_answer">Ваш счет: %s</string>
</resources>